设置网页为utf-8

--- a/homepage.htm
+++ b/homepage.htm
@@ -1,5 +1,6 @@
 <HTML>
 <TITLE>Wentong's Home Page</TITLE>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <META NAME="author" CONTENT="Wentong CAI">
 <META NAME="keywords" CONTENT="Wentong, Parallel Simulation, Parallel Processing, Distributed Simulation, Distributed Computing">
 <META NAME="description" CONTENT="Website of Wentong CAI">
