--- a/menu.htm
+++ b/menu.htm
@@ -5,7 +5,8 @@ xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=us-ascii">
+<!-- <meta http-equiv=Content-Type content="text/html; charset=us-ascii"> -->
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 14">
 <meta name=Originator content="Microsoft Word 14">
