--- a/projects.htm
+++ b/projects.htm
@@ -4,7 +4,8 @@ xmlns:w="urn:schemas-microsoft-com:office:word"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=us-ascii">
+<!-- <meta http-equiv=Content-Type content="text/html; charset=us-ascii"> -->
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 11">
 <meta name=Originator content="Microsoft Word 11">
