--- a/students.htm
+++ b/students.htm
@@ -6,7 +6,8 @@ xmlns:st1="urn:schemas-microsoft-com:office:smarttags"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=us-ascii">
+<!-- <meta http-equiv=Content-Type content="text/html; charset=us-ascii"> -->
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 12">
 <meta name=Originator content="Microsoft Word 12">
