修改图片路径

--- a/interests.htm
+++ b/interests.htm
@@ -238,7 +238,7 @@ content="Wentong, Parallel Simulation, Parallel Processing, Distributed Simulati
  </o:shapelayout></xml><![endif]-->
 </head>
 
-<body bgcolor=white background="pic/ring-bind.gif" lang=EN-US style='tab-interval:
+<body bgcolor=white background="http://www.ntu.edu.sg/home/aswtcai/pic/ring-bind.gif" lang=EN-US style='tab-interval:
 .5in'>
 
 <div class=Section1>
