--- a/menu.htm
+++ b/menu.htm
@@ -474,14 +474,14 @@ div.WordSection1
 
 <p class=MsoNormal align=center style='text-align:center'><span
 style='mso-fareast-font-family:"Times New Roman";mso-no-proof:yes'><img
-width=148 height=59 id="_x0000_i1034" src="pic/newlogo.jpg" alt=NTU></span><span
+width=148 height=59 id="_x0000_i1034" src="http://www.ntu.edu.sg/home/aswtcai/pic/newlogo.jpg" alt=NTU></span><span
 style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
 
 <p class=MsoNormal><span style='mso-fareast-font-family:"Times New Roman"'><o:p>&nbsp;</o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span
 style='mso-fareast-font-family:"Times New Roman";mso-no-proof:yes'><img
-width=500 height=5 id="_x0000_i1033" src="pic/blueline.gif"></span><span
+width=500 height=5 id="_x0000_i1033" src="http://www.ntu.edu.sg/home/aswtcai/pic/blueline.gif"></span><span
 style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
 
 <p class=MsoNormal><span style='mso-fareast-font-family:"Times New Roman"'><o:p>&nbsp;</o:p></span></p>
@@ -495,7 +495,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   <p class=MsoNormal><a href="interests.htm" target=dynamic><span
   style='mso-fareast-font-family:"Times New Roman";mso-no-proof:yes;text-decoration:
   none;text-underline:none'><img border=0 width=113 height=40 id="_x0000_i1032"
-  src=interests.gif alt="Research Interests"></span></a><span style='mso-fareast-font-family:
+  src=http://www.ntu.edu.sg/home/aswtcai/interests.gif alt="Research Interests"></span></a><span style='mso-fareast-font-family:
   "Times New Roman"'><o:p></o:p></span></p>
   </td>
  </tr>
@@ -504,7 +504,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   <p class=MsoNormal><a href="grants.htm" target=dynamic><span
   style='mso-fareast-font-family:"Times New Roman";mso-no-proof:yes;text-decoration:
   none;text-underline:none'><img border=0 width=113 height=40 id="_x0000_i1031"
-  src=grants.gif alt="Research Grants"></span></a><span style='mso-fareast-font-family:
+  src=http://www.ntu.edu.sg/home/aswtcai/grants.gif alt="Research Grants"></span></a><span style='mso-fareast-font-family:
   "Times New Roman"'><o:p></o:p></span></p>
   </td>
  </tr>
@@ -513,7 +513,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   <p class=MsoNormal><a href="activities.htm" target=dynamic><span
   style='mso-fareast-font-family:"Times New Roman";mso-no-proof:yes;text-decoration:
   none;text-underline:none'><img border=0 width=113 height=40 id="_x0000_i1030"
-  src=activities.gif alt="Professional Activities"></span></a><span
+  src=http://www.ntu.edu.sg/home/aswtcai/activities.gif alt="Professional Activities"></span></a><span
   style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   </td>
  </tr>
@@ -522,7 +522,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   <p class=MsoNormal><a href="projects.htm" target=dynamic><span
   style='mso-fareast-font-family:"Times New Roman";mso-no-proof:yes;text-decoration:
   none;text-underline:none'><img border=0 width=113 height=40 id="_x0000_i1029"
-  src=projects.gif alt="Current Projects"></span></a><span style='mso-fareast-font-family:
+  src=http://www.ntu.edu.sg/home/aswtcai/projects.gif alt="Current Projects"></span></a><span style='mso-fareast-font-family:
   "Times New Roman"'><o:p></o:p></span></p>
   </td>
  </tr>
@@ -531,7 +531,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   <p class=MsoNormal><a href="publications.htm" target=dynamic><span
   style='mso-fareast-font-family:"Times New Roman";mso-no-proof:yes;text-decoration:
   none;text-underline:none'><img border=0 width=113 height=40 id="_x0000_i1028"
-  src=publications.gif alt="Publication List"></span></a><span
+  src=http://www.ntu.edu.sg/home/aswtcai/publications.gif alt="Publication List"></span></a><span
   style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   </td>
  </tr>
@@ -540,7 +540,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   <p class=MsoNormal><a href="students.htm" target=dynamic><span
   style='mso-fareast-font-family:"Times New Roman";mso-no-proof:yes;text-decoration:
   none;text-underline:none'><img border=0 width=113 height=40 id="_x0000_i1027"
-  src=students.gif alt="Graduate Students"></span></a><span style='mso-fareast-font-family:
+  src=http://www.ntu.edu.sg/home/aswtcai/students.gif alt="Graduate Students"></span></a><span style='mso-fareast-font-family:
   "Times New Roman"'><o:p></o:p></span></p>
   </td>
  </tr>
@@ -548,7 +548,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   <td style='padding:0in 0in 0in 0in'>
   <p class=MsoNormal><a href="links.htm" target=dynamic><span style='mso-fareast-font-family:
   "Times New Roman";mso-no-proof:yes;text-decoration:none;text-underline:none'><img
-  border=0 width=114 height=41 id="_x0000_i1026" src=links.gif alt="Hot Links"></span></a><span
+  border=0 width=114 height=41 id="_x0000_i1026" src=http://www.ntu.edu.sg/home/aswtcai/links.gif alt="Hot Links"></span></a><span
   style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   </td>
  </tr>
@@ -560,7 +560,7 @@ style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='margin-bottom:12.0pt;text-align:center'><span
 style='mso-fareast-font-family:"Times New Roman";mso-no-proof:yes'><img
-border=0 width=500 height=5 id="_x0000_i1025" src="pic/blueline.gif"></span><span
+border=0 width=500 height=5 id="_x0000_i1025" src="http://www.ntu.edu.sg/home/aswtcai/pic/blueline.gif"></span><span
 style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span
