--- a/projects.htm
+++ b/projects.htm
@@ -240,7 +240,7 @@ content="Wentong, Parallel Simulation, Parallel Processing, Distributed Simulati
  </o:shapelayout></xml><![endif]-->
 </head>
 
-<body bgcolor=white background="pic/ring-bind.gif" lang=EN-US link=blue
+<body bgcolor=white background="http://www.ntu.edu.sg/home/aswtcai/pic/ring-bind.gif" lang=EN-US link=blue
 vlink=purple style='tab-interval:.5in'>
 
 <div class=Section1>
@@ -603,7 +603,7 @@ field-separator'></span><![endif]--><!--[if gte vml 1]><v:group id="_x0000_s1053
  </v:shape><w:wrap type="none"/>
  <w:anchorlock/>
 </v:group><![endif]--><![if !vml]><img width=430 height=239
-src="projects_files/image001.gif" v:shapes="_x0000_s1053 _x0000_s1054 _x0000_s1055 _x0000_s1056 _x0000_s1057 _x0000_s1058 _x0000_s1059 _x0000_s1060 _x0000_s1061 _x0000_s1062 _x0000_s1063 _x0000_s1064 _x0000_s1065 _x0000_s1066 _x0000_s1067 _x0000_s1068 _x0000_s1069 _x0000_s1070 _x0000_s1071 _x0000_s1072 _x0000_s1073 _x0000_s1074 _x0000_s1075 _x0000_s1076 _x0000_s1077"><![endif]><!--[if mso & !supportInlineShapes & supportFields]><v:shape
+src="http://www.ntu.edu.sg/home/aswtcai/projects_files/image001.gif" v:shapes="_x0000_s1053 _x0000_s1054 _x0000_s1055 _x0000_s1056 _x0000_s1057 _x0000_s1058 _x0000_s1059 _x0000_s1060 _x0000_s1061 _x0000_s1062 _x0000_s1063 _x0000_s1064 _x0000_s1065 _x0000_s1066 _x0000_s1067 _x0000_s1068 _x0000_s1069 _x0000_s1070 _x0000_s1071 _x0000_s1072 _x0000_s1073 _x0000_s1074 _x0000_s1075 _x0000_s1076 _x0000_s1077"><![endif]><!--[if mso & !supportInlineShapes & supportFields]><v:shape
  id="_x0000_i1025" type="#_x0000_t75" style='width:322.55pt;height:178.05pt'>
  <v:imagedata croptop="-65520f" cropbottom="65520f"/>
 </v:shape><span style='mso-element:field-end'></span><![endif]--><span
@@ -731,7 +731,7 @@ margin-left:45.0pt;margin-bottom:.0001pt;text-align:center'><!--[if gte vml 1]><
  o:ole="">
  <v:imagedata src="projects_files/image009.emz" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img width=456 height=273
-src="projects_files/image010.gif" v:shapes="_x0000_i1026"><![endif]><!--[if gte mso 9]><xml>
+src="http://www.ntu.edu.sg/home/aswtcai/projects_files/image010.gif" v:shapes="_x0000_i1026"><![endif]><!--[if gte mso 9]><xml>
  <o:OLEObject Type="Embed" ProgID="Word.Picture.8" ShapeID="_x0000_i1026"
   DrawAspect="Content" ObjectID="_1286981127">
  </o:OLEObject>
