--- a/publications.htm
+++ b/publications.htm
@@ -206,7 +206,7 @@ ul
  </o:shapelayout></xml><![endif]-->
 </head>
 
-<body bgcolor=white background="pic/ring-bind.gif" lang=EN-US link="#0000EE"
+<body bgcolor=white background="http://www.ntu.edu.sg/home/aswtcai/pic/ring-bind.gif" lang=EN-US link="#0000EE"
 vlink="#551A8B" style='tab-interval:.5in' alink="#FF0000">
 
 <div class=Section1>
