--- a/biodata.htm
+++ b/biodata.htm
@@ -392,7 +392,7 @@ div.WordSection1
  </o:shapelayout></xml><![endif]-->
 </head>
 
-<body bgcolor=white background="pic/ring-bind.gif" lang=EN-GB link=blue
+<body bgcolor=white background="http://www.ntu.edu.sg/home/aswtcai/pic/ring-bind.gif" lang=EN-GB link=blue
 vlink=purple style='tab-interval:.5in'>
 
 <div class=WordSection1>
@@ -431,7 +431,7 @@ margin-bottom:.0001pt'><!--[if gte vml 1]><v:shapetype id="_x0000_t75"
  <v:imagedata src="biodata_files/image001.jpg" o:title="wentong3"/>
  <w:wrap type="square"/>
 </v:shape><![endif]--><![if !vml]><img width=105 height=146
-src="biodata_files/image002.jpg" align=left hspace=12 alt=wentong3.jpg v:shapes="Picture_x0020_0"><![endif]><span
+src="http://www.ntu.edu.sg/home/aswtcai/biodata_files/image002.jpg" align=left hspace=12 alt=wentong3.jpg v:shapes="Picture_x0020_0"><![endif]><span
 lang=EN-US style='mso-ansi-language:EN-US'>Professor, Division of Computer
 Science <o:p></o:p></span></p>
 
