--- a/links.htm
+++ b/links.htm
@@ -168,7 +168,7 @@ ul
  </o:shapelayout></xml><![endif]-->
 </head>
 
-<body bgcolor=white background="pic/ring-bind.gif" lang=EN-US link=blue
+<body bgcolor=white background="http://www.ntu.edu.sg/home/aswtcai/pic/ring-bind.gif" lang=EN-US link=blue
 vlink=blue style='tab-interval:.5in'>
 
 <div class=Section1>
