--- a/interests.htm
+++ b/interests.htm
@@ -10,7 +10,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=Generator content="Microsoft Word 11">
 <meta name=Originator content="Microsoft Word 11">
 <link rel=File-List href="interests_files/filelist.xml">
-<title>Wentong CAI - Research Interests</title>
+<title>禹洪 - 研究兴趣</title>
 <!--[if gte mso 9]><xml>
  <o:DocumentProperties>
   <o:Author>aswtcai</o:Author>
@@ -227,9 +227,9 @@ ul
 	mso-bidi-language:#0400;}
 </style>
 <![endif]-->
-<meta name=author content="Wentong CAI - Research Interests">
+<meta name=author content="冯禹洪 - 研究兴趣">
 <meta name=keywords
-content="Wentong, Parallel Simulation, Parallel Processing, Distributed Simulation, Distributed Computing">
+content="冯禹洪,  云计算、网格计算，分布式工作流管理，机器学习，普适计算，基于加权图的数据挖掘和分析">
 <!--[if gte mso 9]><xml>
  <o:shapedefaults v:ext="edit" spidmax="8194"/>
 </xml><![endif]--><!--[if gte mso 9]><xml>
@@ -244,82 +244,122 @@ content="Wentong, Parallel Simulation, Parallel Processing, Distributed Simulati
 <div class=Section1>
 
 <p class=MsoNormal style='margin-left:.5in'><b><span style='font-size:18.0pt;
-font-family:Arial'>Research Interests</span></b> </p>
+font-family:Arial'>研究兴趣</span></b> </p>
 
 <p style='margin-top:5.0pt;margin-right:0in;margin-bottom:0in;margin-left:.5in;
 margin-bottom:.0001pt'><o:p>&nbsp;</o:p></p>
 
 <p style='margin-top:5.0pt;margin-right:0in;margin-bottom:0in;margin-left:.5in;
-margin-bottom:.0001pt'><b style='mso-bidi-font-weight:normal'>Parallel and
-Distributed Simulation, and Distributed Virtual Environments<o:p></o:p></b></p>
+margin-bottom:.0001pt'><b style='mso-bidi-font-weight:normal'>云计算和网格计算<o:p></o:p></b></p>
+
+<hr color="#009393"style='margin-left:.5in' ><b><span style='font-size:18.0pt; 
+font-family:Arial'/></b>
+
+<p class=MsoNormal style='margin-left:.5in'><o:p>&nbsp;</o:p></p>
 
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
 margin-bottom:.0001pt;text-indent:-.25in;mso-list:l1 level1 lfo2;tab-stops:
 list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Scalable Architecture/Framework for Distributed
-Simulations</p>
+</span></span></span><![endif]>计算的并行与合作</p>
 
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
 margin-bottom:.0001pt;text-indent:-.25in;mso-list:l1 level1 lfo2;tab-stops:
 list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Consistencies in Distributed Simulation and
-Virtual Environments</p>
+</span></span></span><![endif]>借助互联网提供按需的、海量数据处理和完成复杂计算的平台</p>
 
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
 margin-bottom:.0001pt;text-indent:-.25in;mso-list:l1 level1 lfo2;tab-stops:
 list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Dynamic Data-driven Distributed Simulation</p>
+</span></span></span><![endif]>动态可伸缩的构建自己的虚拟资源池</p>
 
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
 margin-bottom:.0001pt;text-indent:-.25in;mso-list:l1 level1 lfo2;tab-stops:
 list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Agent-based Simulation</p>
-
-<p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
-margin-bottom:.0001pt;text-indent:-.25in;mso-list:l1 level1 lfo2;tab-stops:
-list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
-Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Component-based <span class=SpellE>Modelling</span>
-and Simulation</p>
-
+</span></span></span><![endif]>多承租和多任务</p>
+<p class=MsoNormal style='margin-left:.5in'><o:p>&nbsp;</o:p></p>
+<p class=MsoNormal style='margin-left:.5in'><o:p>&nbsp;</o:p></p>
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:.5in;
-margin-bottom:.0001pt'><b style='mso-bidi-font-weight:normal'>Cluster and Grid
-Computing<o:p></o:p></b></p>
+margin-bottom:.0001pt'><b style='mso-bidi-font-weight:normal'>机器学习<o:p></o:p></b></p>
+
+<hr color="#009393"style='margin-left:.5in' ><b><span style='font-size:18.0pt; 
+font-family:Arial'/></b>
+
+<p class=MsoNormal style='margin-left:.5in'><o:p>&nbsp;</o:p></p>
 
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
 margin-bottom:.0001pt;text-indent:-.25in;mso-list:l0 level1 lfo4;tab-stops:
 list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Distributed Workflow Execution</p>
+</span></span></span><![endif]>面向任务的研究</p>
 
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
 margin-bottom:.0001pt;text-indent:-.25in;mso-list:l0 level1 lfo4;tab-stops:
 list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Service Oriented Architecture</p>
+</span></span></span><![endif]>认知模型</p>
 
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
 margin-bottom:.0001pt;text-indent:-.25in;mso-list:l0 level1 lfo4;tab-stops:
 list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Resource Management for Cooperative, Shared
-Environments</p>
-
+</span></span></span><![endif]>理论分析</p>
+<p class=MsoNormal style='margin-left:.5in'><o:p>&nbsp;</o:p></p>
+<p class=MsoNormal style='margin-left:.5in'><o:p>&nbsp;</o:p></p>
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:.5in;
-margin-bottom:.0001pt'><b style='mso-bidi-font-weight:normal'>Parallel
-Programming and Programming Environments<o:p></o:p></b></p>
+margin-bottom:.0001pt'><b style='mso-bidi-font-weight:normal'>数据挖掘和分析<o:p></o:p></b></p>
+
+<hr color="#009393"style='margin-left:.5in' ><b><span style='font-size:18.0pt; 
+font-family:Arial'/></b>
+
+<p class=MsoNormal style='margin-left:.5in'><o:p>&nbsp;</o:p></p>
+
+
+<p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
+margin-bottom:.0001pt;text-indent:-.25in;mso-list:l0 level1 lfo4;tab-stops:
+list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
+Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><![endif]>加权图的提取和构造</p>
+
+<p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
+margin-bottom:.0001pt;text-indent:-.25in;mso-list:l0 level1 lfo4;tab-stops:
+list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
+Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><![endif]>社区发现</p>
+
+<p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
+margin-bottom:.0001pt;text-indent:-.25in;mso-list:l0 level1 lfo4;tab-stops:
+list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
+Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><![endif]>最短路径</p>
+
+<p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
+margin-bottom:.0001pt;text-indent:-.25in;mso-list:l0 level1 lfo4;tab-stops:
+list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
+Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><![endif]>图的相似性比较</p>
+
+<p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:1.0in;
+margin-bottom:.0001pt;text-indent:-.25in;mso-list:l0 level1 lfo4;tab-stops:
+list 1.0in'><![if !supportLists]><span style='font-family:Symbol;mso-fareast-font-family:
+Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>&middot;<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><![endif]>数据倾斜</p>
+
 
 <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:.5in;
 margin-bottom:.0001pt'><o:p>&nbsp;</o:p></p>
