--- a/links.htm
+++ b/links.htm
@@ -10,7 +10,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=Generator content="Microsoft Word 11">
 <meta name=Originator content="Microsoft Word 11">
 <link rel=File-List href="links_files/filelist.xml">
-<title>Wentong CAI - Hot Links</title>
+<title>冯禹洪 - 热链接</title>
 <!--[if gte mso 9]><xml>
  <o:DocumentProperties>
   <o:Author>aswtcai</o:Author>
@@ -158,7 +158,7 @@ ul
 	mso-bidi-language:#0400;}
 </style>
 <![endif]-->
-<meta name=author content="Wentong CAI - Hot Links">
+<meta name=author content="冯禹洪 - 热链接">
 <meta name=keywords content="">
 <!--[if gte mso 9]><xml>
  <o:shapedefaults v:ext="edit" spidmax="2050"/>
@@ -174,29 +174,36 @@ vlink=blue style='tab-interval:.5in'>
 <div class=Section1>
 
 <p class=MsoNormal style='margin-top:0in;margin-right:0in;margin-bottom:12.0pt;
-margin-left:.5in'><b><span style='font-size:18.0pt;font-family:Arial'>Hot Links</span></b></p>
-
+margin-left:.5in'><b><span style='font-size:18.0pt;font-family:Arial'>相关链接</span></b></p>
+<p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p>
 <ul type=disc>
  <ul type=circle>
   <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Research </li>
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 2.0in'><b>学术研究</b><br/> 
+      <hr color="#009393"style='margin-left:.-1in' ><b><span style='font-size:18.0pt; 
+font-family:Arial'/></b>
+<p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p></li>
   <ul type=square>
+
    <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
        auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
        href="http://www-2.cs.cmu.edu/afs/cs.cmu.edu/user/mleone/web/how-to.html"
-       target="_target">Advice on Research &amp; Writing</a></li>
+       target="_target">关于研究和写作的建议</a></li>
    <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
        auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
        href="http://www.ntu.edu.sg/home/assjturner/www/hotlinks/related.htm"
-       target="_target">Related Research</a> </li>
+       target="_target">相关研究</a> </li>
+       <p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p>
+       <p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p>
   </ul>
   <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Conferences &amp;
-      Journals </li>
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'><b>会议和期刊</b></li>
+      <hr color="#009393"style='margin-left:.-1in' ><b><span style='font-size:18.0pt; 
+font-family:Arial'/></b>
+<p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p>
   <ul type=square>
    <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-       auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'>Major Relevant
-       Conferences: </li>
+       auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'>主要相关会议: </li>
    <ul type=square>
     <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
         auto;mso-list:l0 level4 lfo1;tab-stops:list 2.0in'><a
@@ -219,54 +226,59 @@ margin-left:.5in'><b><span style='font-size:18.0pt;font-family:Arial'>Hot Links<
    </ul>
    <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
        auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
-       href="ConferenceDeadlines.htm" target="_target">Conference Deadlines</a></li>
+       href="ConferenceDeadlines.htm" target="_target">会议截止日期</a></li>
    <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
        auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
        href="http://elib.cs.sfu.ca/Collections/CMPT/cs-journals/"
-       target="_target">Directory of Computer Science Journals</a></li>
+       target="_target">计算机科学期刊的目录</a></li>
+       <p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p>
+       <p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p>
   </ul>
   <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Search Index: </li>
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'><b>搜索索引:</b> 
+      <hr color="#009393"style='margin-left:.-1in' ><b><span style='font-size:18.0pt; 
+font-family:Arial'/></b>
+<p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p></li>
   <ul type=square>
    <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
        auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
-       href="http://citeseer.ist.psu.edu/" target="_target">CiteSeers</a></li>
-   <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-       auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
-       href="http://www.ncstrl.org/" target="_target">CS TR Library</a></li>
-   <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-       auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
-       href="http://scholar.google.com/" target="_target">Google Scholar</a></li>
+       href="http://scholar.google.com/" target="_target">谷歌学术</a></li>
    <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
        auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
        href="http://www.informatik.uni-trier.de/~ley/db/index.html"
-       target="_target">Computer Science Bibliography</a></li>
+       target="_target">计算机科学文献汇总</a></li>
+       <p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p>
+       <p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p>
   </ul>
   <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Digital Library: </li>
+      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'><b>数字化图书馆: </b>
+      <hr color="#009393"style='margin-left:.-1in' ><b><span style='font-size:18.0pt; 
+font-family:Arial'/></b>
+<p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p></li>
   <ul type=square>
    <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
        auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
        href="http://www.acm.org/dl" target="_target">ACM</a></li>
    <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
        auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
-       href="http://computer.org/epub" target="_target">IEEE Computer Society</a></li>
+       href="http://computer.org/epub" target="_target">IEEE计算机学会</a></li>
    <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
        auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
        href="http://link.springer.de/ol/csol" target="_target">Springer</a></li>
    <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
        auto;mso-list:l0 level3 lfo1;tab-stops:list 1.5in'><a
-       href="http://www.sciencedirect.com/" target="_target">Science Direct</a></li>
+       href="http://www.sciencedirect.com/" target="_target">科学指引</a></li>
+       <p class=MsoNormal style='margin-left:.1in'><o:p>&nbsp;</o:p></p>
   </ul>
  </ul>
 </ul>
 
 </div>
 
-<ul type=disc>
+<ul type=disc>&nbsp;&nbsp;&nbsp;深圳大学一角
 <ul type=circle>
-Countries that I have visited:
-<img src="http://chart.apis.google.com/chart?cht=t&chs=440x220&chtm=world&chf=bg,s,336699&chco=d0d0d0,cc0000&chd=s:99999999999999999999&chld=FRBEGRITNLGBVALUDEATCNJPMYSGTWTHVNAUCAUS" width="440" height="220" ><br/>visited 20 states (8.88%)<br/><a href="http://douweosinga.com/projects/visited?region=world">Create your own visited map of The World</a>
+
+<img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1494227202759&di=87c12d2ed52c92aacf850d1122ee135f&imgtype=0&src=http%3A%2F%2Fyouimg1.c-ctrip.com%2Ftarget%2F100q060000001bv4y4A62.jpg" width="440" height="250" ><br/>
 </ul type=disc>
 </ul type=circle>
 
