--- a/Yuhong.htm
+++ b/Yuhong.htm
@@ -2,7 +2,7 @@
 <TITLE>冯禹洪的主页</TITLE>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <META NAME="author" CONTENT="Wentong CAI">
-<META NAME="keywords" CONTENT="Wentong, Parallel Simulation, Parallel Processing, Distributed Simulation, Distributed Computing">
+<META NAME="keywords" CONTENT="Yuhong, Parallel Simulation, Parallel Processing, Distributed Simulation, Distributed Computing">
 <META NAME="description" CONTENT="Website of Wentong CAI">
 </HEAD>
 
